MDEV-36799 refine the second MDEV-32455-type asssert

CACHE INDEX t PARTITION after XA-PREPARE also this a line previously
assert for another "exceptional" sql command:

...

This is really a variety of MDEV-32455.
The assert did not expect another use case of implicit rollback with
XA transaction while the sql command should have been (I think) rejected with

  XAER_RMFAIL: The command cannot be executed when global transaction is in the  ACTIVE state

The assert is refined and its another instance removed being redundant.